--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -11,63 +12,106 @@ body {
 }
 
 header nav {
-     width: 25%;
-     height: 100%;
-     max-width:1000px;
-     margin:0;
-     background: #024959;
-     position:fixed;
-     left:-100%;
+    width: 25%;
+    height: 100%;
+    max-width: 1000px;
+    margin: 0;
+    background: #024959;
+    position: fixed;
+    left: -100%;
 }
+
 .menu_bar {
-    display:block;
-    width:100%;
-    background:#ccc;
+    display: block;
+    width: 100%;
+    background: #ccc;
 }
+
 header nav ul {
-    overflow:hidden;
-    list-style:none;
+    overflow: hidden;
+    list-style: none;
 }
 
     header nav ul li {
-        float: left;
         display: block;
         float: none;
         border-bottom: 1px solid rgba(255,255,255, .3)
     }
 
-header nav ul li a {
-    color:#fff;
-    padding: 20px;
-    display:block;
-    text-decoration:none;
+        header nav ul li a {
+            color: #fff;
+            padding: 20px;
+            display: block;
+            text-decoration: none;
+        }
 
-}
-header nav ul li span {
+        header nav ul li a {
+            margin-right: 10px;
+            font-size: 1.7em;
+        }
 
-    margin-right:10px;
-    font-size: 1.7em;
-}
-header nav ul li a:hover {
-    background:#037E8C;
-}
+        header nav ul li a:hover {
+            background: #037E8C;
+        }
+
 section {
     padding: 20px;
 }
+
 .menu_bar .bt-menu {
     display: block;
     padding: 30px;
     background: #024959;
     color: #fff;
     text-decoration: none;
-    text-align: center;
     font-size: 2em;
 }
 
-.menu_bar span {
-    margin:0;
-    padding:0;
-    float:left;
+.menu_bar i {
+    margin: 0;
+    padding: 0;
+    float: left;
     font-size: 40px;
+}
+
+.student_information {
+    align-items: right;
+    padding: 3em;
+}
+
+.right_col {
+    text-align: right;
+    color: #024959;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-right: 30px;
+    float: right;
+    width: 40%;
+    height: 25%;
+    border-radius: 0.25em;
+    padding: 3%;
+}
+
+.left_col {
+    text-align: right;
+    color: #024959;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    margin-right: 30px;
+    float: left;
+    width: 40%;
+    height: 25%;
+    border-radius: 0.25em;
+    padding: 3%;
+}
+
+.icon {
+    object-fit: contain;
+    border-radius: 100%;
+    margin-right: 20%;
+    margin-left: 30%;
+    width: 15%;
+    height: 10%;
+    float: left;
 }
 
