--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 * {
@@ -6,7 +8,7 @@
 }
 
 body {
-    background: #FFFFFA;
+    background: #DCDCDC;
     margin: 0;
     font-family: "poppins";
 }
@@ -33,6 +35,7 @@ header nav ul {
 }
 
     header nav ul li {
+        float: left;
         display: block;
         float: none;
         border-bottom: 1px solid rgba(255,255,255, .3)
@@ -55,7 +58,35 @@ header nav ul {
         }
 
 section {
-    padding: 20px;
+    padding: 2em;
+
+ 
+
+}
+input {
+    width: 50%;
+    padding: 1em;
+    margin-bottom: 2em;
+    border-radius: 0.3em;
+    border: 1px solid gray;
+    box-sizing: border-box;
+    
+    
+}
+
+input[type=submit]{
+    background-color:cornflowerblue;
+    color: white;
+    font-weight:bold;
+    font-size: 1em;
+    border:none;
+    border-radius:5em;
+    cursor:pointer;
+}
+.left {
+    margin: auto;
+    width: 30%;
+    margin-left:0px;
 }
 
 .menu_bar .bt-menu {
@@ -81,6 +112,7 @@ section {
 
 .right_col {
     text-align: right;
+    background: #FFFFFF;
     color: #024959;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -95,7 +127,8 @@ section {
 .left_col {
     text-align: right;
     color: #024959;
-    margin-top: 10px;
+    background: #FFFFFF;
+    margin-top: 20px;
     margin-bottom: 20px;
     margin-right: 30px;
     float: left;
@@ -114,4 +147,3 @@ section {
     height: 10%;
     float: left;
 }
-
